--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             going outside their intended box. Instead of using a div element the designer uses a rectangular shape and attempts to
             overwrite what's on top of it in a different element.
         </p>
-        <a href="example.html"><img id='example-1' src="images/example.png"></a>
+        <a href="example.html"><img id='example-1' src="images/example.png" alt="website with bad design"></a>
     </div>
 </body>
 </html>
