--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="nav-bar">
         <ul class="link-bar">
-            <li><a href="index.html.html/">Home</a></li>
+            <li><a href="index.html/">Home</a></li>
             <li><a href="index.html">Fix</a></li>
             <li><a href="https://validator.nu/?doc=https%3A%2F%2Ftyrepickett.github.io%2Fjuliet-final%2F">See code</a></li>
 
