--- a/example.html
+++ b/example.html
@@ -8,8 +8,8 @@
 <body>
     <div id="nav-bar">
         <ul class="link-bar">
-            <li><a href="index.html/">Home</a></li>
-            <li><a href="index.html">Fix</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="example.html">Fix</a></li>
             <li><a href="https://validator.nu/?doc=https%3A%2F%2Ftyrepickett.github.io%2Fjuliet-final%2F">See code</a></li>
 
         </ul>
